# finbert-rust-options-api

./: .env.example  .gitignore  Cargo.toml  PROJECT_STRUCTURE.md  RASPBERRY_PI_GUIDE.md  RASPBERRY_PI_TROUBLESHOOTING.md  README.md  SERVICE-SETUP.md  TCH_RS_COMPATIBILITY_GUIDE.md  build-pytorch-pi.sh  build_only.sh  env.example  finbert-api.service  finbert-options-api.service  fix-pytorch-linking.sh  fix-pytorch-pi-comprehensive.sh  fix-pytorch-pi.sh  fix-torch-sys-version.sh  install-and-run-clean.sh  install-and-run-updated.sh  install-and-run.sh  install-pytorch-pi.sh  install-service.sh  install.sh  install_simple.sh  manage-service.sh  quick-start.sh  setup-rpi.sh  setup-service-for-user.sh  setup-service.sh
docs/: QUICK_START.md  RASPBERRY_PI_GUIDE.md  RASPBERRY_PI_TROUBLESHOOTING.md  SCRIPTS_OVERVIEW.md  TORCH_SYS_VERSION_COMPATIBILITY.md  UPDATED_APPROACH.md
src/: alpaca_data.rs  main.rs  onnx_sentiment.rs  tokenizer.rs  types.rs
src/model/: mod.rs
