[package]
name = "finbert-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "full", "sync"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
console = { version = "0.16", features = ["std"] }
dotenv = "0.15"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
