[package]
name = "finbert-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "full", "sync"] }
anyhow = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
console = "0.16"
dotenv = "0.15"
axum = "0.7"
tower-http = { version = "0.6.6", features = ["cors", "limit", "timeout", "trace"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
once_cell = "1.19"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
num_cpus = "1.0"

# For ONNX inference - using ort for better compatibility but with cleaner integration
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
tokenizers = "0.20"
ndarray = "0.16"

